--- a/PQR/MenuView.xib
+++ b/PQR/MenuView.xib
@@ -48,41 +48,60 @@
                         <constraint firstItem="cXL-GW-wif" firstAttribute="leading" secondItem="6AK-2y-KMv" secondAttribute="leading" id="wy3-YU-Kbg"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D28-6Y-tO8" customClass="UIButton">
-                    <rect key="frame" x="291" y="48" width="40" height="40"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D28-6Y-tO8" customClass="UIButton">
+                    <rect key="frame" x="291" y="26" width="84" height="84"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="next" translatesAutoresizingMaskIntoConstraints="NO" id="JI2-OM-qBH">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="next" translatesAutoresizingMaskIntoConstraints="NO" id="JI2-OM-qBH">
+                            <rect key="frame" x="22" y="22" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="JI2-OM-qBH" secondAttribute="height" multiplier="1:1" id="JYe-Ch-pmU"/>
+                            </constraints>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="JI2-OM-qBH" secondAttribute="bottom" id="KzZ-8e-9G6"/>
+                        <constraint firstItem="JI2-OM-qBH" firstAttribute="centerX" secondItem="D28-6Y-tO8" secondAttribute="centerX" id="N86-05-AIl"/>
                         <constraint firstItem="JI2-OM-qBH" firstAttribute="top" secondItem="D28-6Y-tO8" secondAttribute="top" id="Sx2-lg-y8g"/>
+                        <constraint firstItem="JI2-OM-qBH" firstAttribute="centerY" secondItem="D28-6Y-tO8" secondAttribute="centerY" id="TMc-z3-li6"/>
                         <constraint firstAttribute="trailing" secondItem="JI2-OM-qBH" secondAttribute="trailing" id="cDF-Ge-jJO"/>
                         <constraint firstItem="JI2-OM-qBH" firstAttribute="leading" secondItem="D28-6Y-tO8" secondAttribute="leading" id="imj-I4-KAg"/>
                         <constraint firstAttribute="width" secondItem="D28-6Y-tO8" secondAttribute="height" multiplier="1:1" id="zId-L2-q9g"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="KzZ-8e-9G6"/>
+                            <exclude reference="Sx2-lg-y8g"/>
+                            <exclude reference="cDF-Ge-jJO"/>
+                            <exclude reference="imj-I4-KAg"/>
+                        </mask>
+                    </variation>
                     <connections>
-                        <action selector="next:" destination="iN0-l3-epB" eventType="valueChanged" id="zqu-un-i0C"/>
+                        <action selector="next:" destination="iN0-l3-epB" eventType="touchUpInside" id="wLb-vE-S8a"/>
                     </connections>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.84705882352941175" green="0.37647058823529411" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="D28-6Y-tO8" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="40:375" id="6EZ-ok-RqY"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="D28-6Y-tO8" secondAttribute="trailing" id="I57-hV-Ygo"/>
+                <constraint firstItem="JI2-OM-qBH" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="I4e-RZ-auo"/>
+                <constraint firstAttribute="trailing" secondItem="D28-6Y-tO8" secondAttribute="trailing" id="I57-hV-Ygo"/>
                 <constraint firstItem="D28-6Y-tO8" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="LRM-6X-lLn"/>
                 <constraint firstItem="6AK-2y-KMv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="OCe-BF-ame"/>
+                <constraint firstItem="JI2-OM-qBH" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="40: 375" id="R2t-sJ-OH7"/>
                 <constraint firstItem="6AK-2y-KMv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="19" id="SZK-5A-G8u"/>
                 <constraint firstItem="Ksr-82-cQ1" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="272:375" id="it1-gW-0Kl"/>
+                <constraint firstItem="JI2-OM-qBH" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jtp-gY-JvO"/>
                 <constraint firstItem="6AK-2y-KMv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="sFM-TL-dXj"/>
-                <constraint firstItem="D28-6Y-tO8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6AK-2y-KMv" secondAttribute="trailing" id="tvp-Yw-JnT"/>
+                <constraint firstItem="D28-6Y-tO8" firstAttribute="leading" secondItem="6AK-2y-KMv" secondAttribute="trailing" id="tvp-Yw-JnT"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="sFM-TL-dXj"/>
+                    <exclude reference="6EZ-ok-RqY"/>
+                    <exclude reference="I4e-RZ-auo"/>
+                    <exclude reference="jtp-gY-JvO"/>
                 </mask>
             </variation>
             <connections>
