switch and container

--- a/PQR/Base.lproj/Main.storyboard
+++ b/PQR/Base.lproj/Main.storyboard
@@ -221,6 +221,11 @@
                                 <state key="normal" title="LOGIN">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRad">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <variation key="default">
                                     <mask key="constraints">
                                         <exclude reference="dmd-JZ-PsY"/>
@@ -251,11 +256,114 @@
                     <connections>
                         <outlet property="descriptionLabel" destination="kmB-Ee-rT0" id="hZ4-66-StI"/>
                         <outlet property="titleLabel" destination="BaZ-Ug-O4E" id="Pq9-Jm-jgM"/>
+                        <segue destination="iOH-f9-VJB" kind="show" identifier="next" id="FlM-I6-vnf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XNR-Cm-jya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2448" y="1038"/>
+        </scene>
+        <!--Main View Controller-->
+        <scene sceneID="4sm-tb-yMc">
+            <objects>
+                <viewController id="iOH-f9-VJB" customClass="MainViewController" customModule="PQR" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="e50-CK-BNw"/>
+                        <viewControllerLayoutGuide type="bottom" id="kLv-UF-bwH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eNr-H9-HFE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFw-er-9is">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="146"/>
+                                <color key="backgroundColor" red="0.80000000000000004" green="0.28627450980392155" blue="0.30588235294117649" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="YFw-er-9is" secondAttribute="height" multiplier="375:91" id="ode-M5-Jdi"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MHP-e0-YSA">
+                                <rect key="frame" x="0.0" y="146" width="600" height="454"/>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YFw-er-9is" firstAttribute="leading" secondItem="eNr-H9-HFE" secondAttribute="leading" id="Gqa-RM-4JM"/>
+                            <constraint firstItem="MHP-e0-YSA" firstAttribute="top" secondItem="YFw-er-9is" secondAttribute="bottom" id="UTQ-Nx-3i5"/>
+                            <constraint firstAttribute="trailing" secondItem="MHP-e0-YSA" secondAttribute="trailing" id="Yhc-SZ-9gh"/>
+                            <constraint firstItem="YFw-er-9is" firstAttribute="top" secondItem="eNr-H9-HFE" secondAttribute="top" id="aF0-FC-Km5"/>
+                            <constraint firstItem="YFw-er-9is" firstAttribute="width" secondItem="eNr-H9-HFE" secondAttribute="width" id="cyk-Cz-B2F"/>
+                            <constraint firstItem="MHP-e0-YSA" firstAttribute="leading" secondItem="eNr-H9-HFE" secondAttribute="leading" id="jwv-xo-pde"/>
+                            <constraint firstAttribute="trailing" secondItem="YFw-er-9is" secondAttribute="trailing" id="qXf-UW-1ic"/>
+                            <constraint firstItem="kLv-UF-bwH" firstAttribute="top" secondItem="MHP-e0-YSA" secondAttribute="bottom" id="uiZ-6W-KBb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="MHP-e0-YSA" id="efC-OO-Yxw"/>
+                        <outlet property="navBar" destination="YFw-er-9is" id="ECS-gU-PBK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aiY-bv-IZJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3087" y="1038"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="om6-s9-vQd">
+            <objects>
+                <viewController storyboardIdentifier="create" useStoryboardIdentifierAsRestorationIdentifier="YES" id="xgz-xn-qM6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UBZ-2q-PMi">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgP-lQ-61X">
+                                <rect key="frame" x="275" y="289" width="51" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kgP-lQ-61X" firstAttribute="centerY" secondItem="UBZ-2q-PMi" secondAttribute="centerY" id="q2R-uj-i7N"/>
+                            <constraint firstItem="kgP-lQ-61X" firstAttribute="centerX" secondItem="UBZ-2q-PMi" secondAttribute="centerX" id="u21-GP-dsb"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="600"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Jo-x3-0I8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3725" y="1047"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="oLQ-ee-dc0">
+            <objects>
+                <viewController storyboardIdentifier="view" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RrG-20-BTs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="upl-hY-VMx"/>
+                        <viewControllerLayoutGuide type="bottom" id="L2n-vo-9OV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1Co-uA-kZq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rtf-fu-3aA">
+                                <rect key="frame" x="282" y="289" width="37" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Rtf-fu-3aA" firstAttribute="centerX" secondItem="1Co-uA-kZq" secondAttribute="centerX" id="lED-eB-Ruv"/>
+                            <constraint firstItem="Rtf-fu-3aA" firstAttribute="centerY" secondItem="1Co-uA-kZq" secondAttribute="centerY" id="pEI-AL-IK3"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rj7-la-QuU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4353" y="1047"/>
         </scene>
     </scenes>
     <resources>
