--- a/PQR/Base.lproj/Main.storyboard
+++ b/PQR/Base.lproj/Main.storyboard
@@ -334,7 +334,7 @@
                                                     <rect key="frame" x="15" y="0.0" width="570" height="99"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -377,7 +377,7 @@
         <!--View Controller-->
         <scene sceneID="oLQ-ee-dc0">
             <objects>
-                <viewController storyboardIdentifier="view" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RrG-20-BTs" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="view" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RrG-20-BTs" customClass="ViewController" customModule="PQR" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="upl-hY-VMx"/>
                         <viewControllerLayoutGuide type="bottom" id="L2n-vo-9OV"/>
